--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6f24c98e8b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="app">
@@ -16,13 +17,17 @@
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng shopee</li>
                         <li class="header__navbar-item">Kết nối</li>
+                        <a href=""><i class="fab fa-facebook header__navbar-icon-link"></i></a>
+                        <a href=""><i class="fab fa-instagram header__navbar-icon-link"></i></a>
                     </ul>
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link">Thông báo</a>
+                            <a href="" class="header__navbar-item-link">
+                                <i class="far fa-bell header__navbar-icon-link"></i> Thông báo</a>
                         </li>
                         <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link">Trợ giúp</a>
+                            <a href="" class="header__navbar-item-link">
+                                <i class="far fa-question-circle header__navbar-icon-link"></i> Trợ giúp</a>
                         </li>
                         <li class="header__navbar-item header__navbar-item--separate">
                             <a href="" class="header__navbar-item-link header__navbar-item-link--bold ">Đăng ký</a>
