+ update css header

--- a/index.html
+++ b/index.html
@@ -15,19 +15,29 @@
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng shopee</li>
-                        <li class="header__navbar-item">Kết nối</li>
-                        <a href=""><i class="fab fa-facebook header__navbar-icon-link"></i></a>
-                        <a href=""><i class="fab fa-instagram header__navbar-icon-link"></i></a>
+                        <li class="header__navbar-item header__navbar-item--separate">
+                            <a href="" class="header__navbar-item-link">
+                                Vào cửa hàng trên ứng dụng shopee
+                            </a>
+                        </li>
+                        <li class="header__navbar-item">
+                            Kết nối
+                            <a href="" class="header__navbar-icon-link">
+                                <i class="header__navbar-icon fab fa-facebook"></i>
+                            </a>
+                            <a href="" class="header__navbar-icon-link">
+                                <i class="header__navbar-icon fab fa-instagram"></i>
+                            </a>
+                        </li>
                     </ul>
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link">
-                                <i class="far fa-bell header__navbar-icon-link"></i> Thông báo</a>
+                                <i class="header__navbar-icon far fa-bell"></i> Thông báo</a>
                         </li>
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link">
-                                <i class="far fa-question-circle header__navbar-icon-link"></i> Trợ giúp</a>
+                                <i class="header__navbar-icon far fa-question-circle"></i> Trợ giúp</a>
                         </li>
                         <li class="header__navbar-item header__navbar-item--separate">
                             <a href="" class="header__navbar-item-link header__navbar-item-link--bold ">Đăng ký</a>
