--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--separate">
-                            <a href="" class="header__navbar-item-link">
-                                Vào cửa hàng trên ứng dụng shopee
-                            </a>
+                        <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
+                            Vào cửa hàng trên ứng dụng shopee
+                            <div class="header__qr">
+                                <img src="./assets/img/qr-code.png" alt="QR Code" class="header__qr-img">
+                                <div class="header__qr-apps">
+                                    <a href="" class="header__qr-link">
+                                        <img src="./assets/img/app-store.png" alt="App Store" class="header__qr-download-app-img">
+                                    </a>
+                                    <a href="" class="header__qr-link">
+                                        <img src="./assets/img/google-play.png" alt="Google Play" class="header__qr-download-app-img">
+                                    </a>
+                                </div>
+                            </div>
                         </li>
                         <li class="header__navbar-item">
                             Kết nối
