- update css header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6f24c98e8b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="app">
         <header class="header">
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
+                        <li class="header__navbar-item
+                                header__navbar-item--has-qr
+                                header__navbar-item--separate">
                             Vào cửa hàng trên ứng dụng shopee
                             <div class="header__qr">
-                                <img src="./assets/img/qr-code.png" alt="QR Code" class="header__qr-img">
+                                <img src="./assets/img/qr-code.png" alt="QR
+                                        Code" class="header__qr-img">
                                 <div class="header__qr-apps">
                                     <a href="" class="header__qr-link">
-                                        <img src="./assets/img/app-store.png" alt="App Store" class="header__qr-download-app-img">
+                                        <img src="./assets/img/app-store.png" alt="App Store"
+                                            class="header__qr-download-app-img">
                                     </a>
                                     <a href="" class="header__qr-link">
-                                        <img src="./assets/img/google-play.png" alt="Google Play" class="header__qr-download-app-img">
+                                        <img src="./assets/img/google-play.png" alt="Google Play"
+                                            class="header__qr-download-app-img">
                                     </a>
                                 </div>
                             </div>
@@ -32,33 +39,89 @@
                         <li class="header__navbar-item">
                             Kết nối
                             <a href="" class="header__navbar-icon-link">
-                                <i class="header__navbar-icon fab fa-facebook"></i>
+                                <i class="header__navbar-icon fab
+                                        fa-facebook"></i>
                             </a>
                             <a href="" class="header__navbar-icon-link">
-                                <i class="header__navbar-icon fab fa-instagram"></i>
+                                <i class="header__navbar-icon fab
+                                        fa-instagram"></i>
                             </a>
                         </li>
                     </ul>
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link">
-                                <i class="header__navbar-icon far fa-bell"></i> Thông báo</a>
+                                <i class="header__navbar-icon far fa-bell"></i>
+                                Thông báo
+                            </a>
+                            <div class="header__notification">
+                                <h3 class="header__notification-header">Thông
+                                    báo mới nhận</h3>
+                                <ul class="header__notification-list">
+                                    <li class="header__notification-item">
+                                        <a href="" class="header__notification-link">
+                                            <img src="./assets/img/notification.png" alt="Notification Image"
+                                                class="header__notification-img">
+                                            <div class="header__notification-info">
+                                                <span class="header__notification-name">Sản
+                                                    phẩm 8K ở đây hết</span>
+                                                <span class="header__notification-description">🙌
+                                                    Tết đủ đầy
+                                                    ⚡ Sắm ngay Flash Sale 8K</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notification-item header__notification-item--viewed">
+                                        <a href="" class="header__notification-link">
+                                            <img src="./assets/img/notification.png" alt="Notification Image"
+                                                class="header__notification-img">
+                                            <div class="header__notification-info">
+                                                <span class="header__notification-name">Sản
+                                                    phẩm 8K ở đây hết</span>
+                                                <span class="header__notification-description">🙌
+                                                    Tết đủ đầy
+                                                    ⚡ Sắm ngay Flash Sale 8K</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notification-item">
+                                        <a href="" class="header__notification-link">
+                                            <img src="./assets/img/notification.png" alt="Notification Image"
+                                                class="header__notification-img">
+                                            <div class="header__notification-info">
+                                                <span class="header__notification-name">Sản
+                                                    phẩm 8K ở đây hết</span>
+                                                <span class="header__notification-description">🙌
+                                                    Tết đủ đầy
+                                                    ⚡ Sắm ngay Flash Sale 8K</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="header__notification-footer">
+                                    <a href="#" class="header__notification-footer-btn">Xem tất cả</a>
+                                </div>
+                            </div>
                         </li>
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link">
-                                <i class="header__navbar-icon far fa-question-circle"></i> Trợ giúp</a>
+                                <i class="header__navbar-icon far
+                                        fa-question-circle"></i> Trợ giúp</a>
                         </li>
-                        <li class="header__navbar-item header__navbar-item--separate">
-                            <a href="" class="header__navbar-item-link header__navbar-item-link--bold ">Đăng ký</a>
+                        <li class="header__navbar-item
+                                header__navbar-item--separate">
+                            <a href="" class="header__navbar-item-link
+                                    header__navbar-item-link--bold">Đăng ký</a>
                         </li>
                         <li class="header__navbar-item">
-                            <a href="" class="header__navbar-item-link header__navbar-item-link--bold">Đăng nhập</a>
+                            <a href="" class="header__navbar-item-link
+                                    header__navbar-item-link--bold">Đăng nhập</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
-        
+
         <div class="container">
 
         </div>
@@ -68,4 +131,5 @@
         </footer>
     </div>
 </body>
+
 </html>
