- update css header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </li>
                     </ul>
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
+                        <li class="header__navbar-item header__navbar-item--has-notification">
                             <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon far fa-bell"></i>
                                 Thông báo
@@ -63,11 +63,9 @@
                                             <img src="./assets/img/notification.png" alt="Notification Image"
                                                 class="header__notification-img">
                                             <div class="header__notification-info">
-                                                <span class="header__notification-name">Sản
-                                                    phẩm 8K ở đây hết</span>
-                                                <span class="header__notification-description">🙌
-                                                    Tết đủ đầy
-                                                    ⚡ Sắm ngay Flash Sale 8K</span>
+                                                <span class="header__notification-name">Sản phẩm 8K ở đây hết</span>
+                                                <span class="header__notification-description">🙌 Tết đủ đầy ⚡ Sắm ngay
+                                                    Flash Sale 8K</span>
                                             </div>
                                         </a>
                                     </li>
@@ -76,11 +74,9 @@
                                             <img src="./assets/img/notification.png" alt="Notification Image"
                                                 class="header__notification-img">
                                             <div class="header__notification-info">
-                                                <span class="header__notification-name">Sản
-                                                    phẩm 8K ở đây hết</span>
-                                                <span class="header__notification-description">🙌
-                                                    Tết đủ đầy
-                                                    ⚡ Sắm ngay Flash Sale 8K</span>
+                                                <span class="header__notification-name">Sản phẩm 8K ở đây hết</span>
+                                                <span class="header__notification-description">🙌 Tết đủ đầy ⚡ Sắm ngay
+                                                    Flash Sale 8K</span>
                                             </div>
                                         </a>
                                     </li>
@@ -89,11 +85,9 @@
                                             <img src="./assets/img/notification.png" alt="Notification Image"
                                                 class="header__notification-img">
                                             <div class="header__notification-info">
-                                                <span class="header__notification-name">Sản
-                                                    phẩm 8K ở đây hết</span>
-                                                <span class="header__notification-description">🙌
-                                                    Tết đủ đầy
-                                                    ⚡ Sắm ngay Flash Sale 8K</span>
+                                                <span class="header__notification-name">Sản phẩm 8K ở đây hết</span>
+                                                <span class="header__notification-description">🙌 Tết đủ đầy ⚡ Sắm ngay
+                                                    Flash Sale 8K</span>
                                             </div>
                                         </a>
                                     </li>
