+ css base modal

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 
         </footer>
     </div>
+
+    <!-- Modal -->
+    <div class="modal">
+        <div class="modal__overlay"></div>
+        <div class="modal__body">
+            <div class="modal_inner"></div>
+        </div>
+    </div>
 </body>
 
 </html>
