--- a/index.html
+++ b/index.html
@@ -129,36 +129,36 @@
     <div class="modal">
         <div class="modal__overlay"></div>
         <div class="modal__body">
-            <div class="modal_inner">
-                <div class="auth-form">
+            <div class="auth-form">
+                <div class="auth-form__container">
                     <div class="auth-form__header">
                         <h3 class="auth-form__heading">Đăng ký</h3>
-                        <span class="auth-form--switch-btn">Đăng nhập</span>
+                        <span class="auth-form__switch-btn">Đăng nhập</span>
                     </div>
-                </div>
 
-                <div class="auth-form__form">
-                    <div class="auth-form__group">
-                        <input type="text" class="auth-form__input" placeholder="Email của bạn">
+                    <div class="auth-form__form">
+                        <div class="auth-form__group">
+                            <input type="text" class="auth-form__input" placeholder="Email của bạn">
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn">
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="password" class="auth-form__input" placeholder="Nhập lại mật khẩu">
+                        </div>
                     </div>
-                    <div class="auth-form__group">
-                        <input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn">
-                    </div>
-                    <div class="auth-form__group">
-                        <input type="password" class="auth-form__input" placeholder="Nhập lại mật khẩu">
-                    </div>
-                </div>
 
-                <div class="auth-form__aside">
-                    <p class="auth-policy-text">Bằng việc đăng ký, bạn đã đồng ý với Shoppe về
-                        <a href="auth-policy-link">Điều khoản dịch vụ</a> &
-                        <a href="auth-policy-link">Chính sách bảo mật</a>
-                    </p>
-                </div>
+                    <div class="auth-form__aside">
+                        <p class="auth-form__policy-text">Bằng việc đăng ký, bạn đã đồng ý với Shoppe về
+                            <a href="" class="auth-form__text-link">Điều khoản dịch vụ</a> &
+                            <a href="" class="auth-form__text-link">Chính sách bảo mật</a>
+                        </p>
+                    </div>
 
-                <div class="auth-form__controls">
-                   <button class="btn">TRỞ LẠI</button>
-                   <button class="btn btn-primary">ĐĂNG KÝ</button>
+                    <div class="auth-form__controls">
+                        <button class="btn">TRỞ LẠI</button>
+                        <button class="btn btn--primary">ĐĂNG KÝ</button>
+                    </div>
                 </div>
 
                 <div class="auth-form__socials">
