--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@
                     </div>
 
                     <div class="auth-form__controls">
-                        <button class="btn">TRỞ LẠI</button>
-                        <button class="btn btn--primary">ĐĂNG KÝ</button>
+                        <button class="btn btn--default">TRỞ LẠI</button>
+                        <button class="btn btn--primary ml-8">ĐĂNG KÝ</button>
                     </div>
                 </div>
 
                 <div class="auth-form__socials">
-                    <a href="" class="btn btn--with-icon">
-                        <i class="fab fa-facebook-square"></i>
+                    <a href="" class="auth-form__socials--facebook btn btn--with-icon btn--sm">
+                        <i class="auth-form__socials-icon fab fa-facebook-square mr-8"></i>
                         Kết nối với Facebook
                     </a>
-                    <a href="" class="btn btn--with-icon">
-                        <i class="fab fa-google"></i>
+                    <a href="" class="auth-form__socials--google btn btn--with-icon btn--sm">
+                        <i class="auth-form__socials-icon fab fa-google mr-8"></i>
                         Kết nối với Google
                     </a>
                 </div>
