--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal">
+    <!-- <div class="modal">
         <div class="modal__overlay"></div>
-        <div class="modal__body">
-            <div class="auth-form">
+        <div class="modal__body"> -->
+            <!-- Register Form -->
+            <!-- <div class="auth-form">
                 <div class="auth-form__container">
                     <div class="auth-form__header">
                         <h3 class="auth-form__heading">Đăng ký</h3>
@@ -171,9 +172,52 @@
                         Kết nối với Google
                     </a>
                 </div>
+            </div> -->
+            
+            <!-- Login Form -->
+            <!-- <div class="auth-form">
+                <div class="auth-form__container">
+                    <div class="auth-form__header">
+                        <h3 class="auth-form__heading">Đăng nhập</h3>
+                        <span class="auth-form__switch-btn">Đăng ký</span>
+                    </div>
+
+                    <div class="auth-form__form">
+                        <div class="auth-form__group">
+                            <input type="text" class="auth-form__input" placeholder="Email của bạn">
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn">
+                        </div>
+                    </div>
+
+                    <div class="auth-form__aside">
+                        <div class="auth-form__help">
+                            <a href="" class="auth-form__help-link auth-form__help-link--forgot">Quên mật khẩu</a>
+                            <span class="auth-form__help-separate"></span>
+                            <a href="" class="auth-form__help-link auth-form__help-link--need-help">Cần trợ giúp?</a>
+                        </div>
+                    </div>
+
+                    <div class="auth-form__controls">
+                        <button class="btn btn--default">TRỞ LẠI</button>
+                        <button class="btn btn--primary ml-8">ĐĂNG NHẬP</button>
+                    </div>
+                </div>
+
+                <div class="auth-form__socials">
+                    <a href="" class="auth-form__socials--facebook btn btn--with-icon btn--sm">
+                        <i class="auth-form__socials-icon fab fa-facebook-square mr-8"></i>
+                        Kết nối với Facebook
+                    </a>
+                    <a href="" class="auth-form__socials--google btn btn--with-icon btn--sm">
+                        <i class="auth-form__socials-icon fab fa-google mr-8"></i>
+                        Kết nối với Google
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
