+ css cart header

--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@
                         </button>
                     </div>
                     <div class="header__cart">
-                        <i class="header__cart-icon fas fa-shopping-cart"></i>
+                        <div class="header__cart-wrap">
+                            <i class="header__cart-icon fas fa-shopping-cart"></i>
+                            <div class="header__cart-list header__cart-list--empty">
+                                <img src="./assets/img/empty-cart.png" alt="" class="header__cart-empty-img">
+                                <div class="header__cart-list-empty-msg">Chưa có sản phẩm</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
