+ css cart list

--- a/index.html
+++ b/index.html
@@ -159,9 +159,73 @@
                     <div class="header__cart">
                         <div class="header__cart-wrap">
                             <i class="header__cart-icon fas fa-shopping-cart"></i>
-                            <div class="header__cart-list header__cart-list--empty">
+                            <span class="header__cart-quantity">3</span>
+                            <!-- Card empty: .header__cart-list--empty -->
+                            <div class="header__cart-list">
                                 <img src="./assets/img/empty-cart.png" alt="" class="header__cart-empty-img">
                                 <div class="header__cart-list-empty-msg">Chưa có sản phẩm</div>
+
+                                <h4 class="header__cart-heading">Sản phẩm mới thêm</h4>
+                                <ul class="header__cart-list-item">
+                                    <li class="header__cart-item">
+                                        <img src="https://cf.shopee.vn/file/a9809cb7e7f6dd7715f5b909538ce2b3_tn" alt=""
+                                            class="header__cart-item-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart-item-head">
+                                                <h5 class="header__cart-item-name">[Mã ELREMT giảm 3% đơn 1TR] Apple
+                                                    AirPods with Charging Case 2nd gen</h5>
+                                                <div class="header__cart-item-price-wrap">
+                                                    <span class="header__cart-item-price">₫3.390.000</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-quantity">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-body">
+                                                <span class="header__cart-item-description">Phân loại: vàng</span>
+                                                <span class="header__cart-item-remove">Xóa</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="header__cart-item">
+                                        <img src="https://cf.shopee.vn/file/b3a6bc1e0c7803a9a8541d49bb6c3333_tn" alt=""
+                                            class="header__cart-item-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart-item-head">
+                                                <h5 class="header__cart-item-name">Túi chống sốc TOMTOC Protective
+                                                    Macbook Air 13 / Macbook New Retina - A13-C01</h5>
+                                                <div class="header__cart-item-price-wrap">
+                                                    <span class="header__cart-item-price">₫712.000</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-quantity">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-body">
+                                                <span class="header__cart-item-description">Phân loại: bạc</span>
+                                                <span class="header__cart-item-remove">Xóa</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="header__cart-item">
+                                        <img src="https://cf.shopee.vn/file/f603d9d147047062eb4f4b5d4172701d_tn" alt=""
+                                            class="header__cart-item-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart-item-head">
+                                                <h5 class="header__cart-item-name">Hộp Bảo Vệ Silicone Cho Airpods
+                                                    Ugreen 50867</h5>
+                                                <div class="header__cart-item-price-wrap">
+                                                    <span class="header__cart-item-price">₫790.000</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-quantity">1</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-body">
+                                                <span class="header__cart-item-description">Phân loại: đồng</span>
+                                                <span class="header__cart-item-remove">Xóa</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <a href="#" class="header__cart-view btn btn--primary">Xem giỏ hàng</a>
                             </div>
                         </div>
                     </div>
