+ css user info

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <i class="header__navbar-icon far
                                         fa-question-circle"></i> Trợ giúp</a>
                         </li>
-                        <li class="header__navbar-item
+                        <!-- <li class="header__navbar-item
                                 header__navbar-item--separate">
                             <a href="" class="header__navbar-item-link
                                     header__navbar-item-link--bold">Đăng ký</a>
@@ -110,6 +110,26 @@
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-item-link
                                     header__navbar-item-link--bold">Đăng nhập</a>
+                        </li> -->
+                        <li class="header__navbar-item header__navbar-user">
+                            <img class="header__navbar-user-img"
+                                src="https://cf.shopee.vn/file/d2b0ed346aabb9abf336a7d912f60ea4_tn" alt="">
+                            <span class="header__navbar-user-name">Trịnh Minh Nhật</span>
+
+                            <ul class="header__navbar-user-menu">
+                                <li class="header__navbar-user-menu-item">
+                                    <a href="#">Tài khoản của tôi</a>
+                                </li>
+                                <li class="header__navbar-user-menu-item">
+                                    <a href="#">Địa chỉ của tôi</a>
+                                </li>
+                                <li class="header__navbar-user-menu-item">
+                                    <a href="#">Đơn mua</a>
+                                </li>
+                                <li class="header__navbar-user-menu-item">
+                                    <a href="#">Đăng xuất</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
