--- a/index.html
+++ b/index.html
@@ -256,7 +256,17 @@
         </header>
 
         <div class="container">
-
+            <nav class="category">
+                <h3 class="category__heading">
+                    <i class="fas fa-list"></i>
+                    Danh mục
+                </h3>
+                <ul class="category-list">
+                    <li class="category-list-item category-list-item--active">
+                        <a href="" class="category-list-item__link">a</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
 
         <footer class="footer">
