--- a/index.html
+++ b/index.html
@@ -255,18 +255,32 @@
             </div>
         </header>
 
-        <div class="container">
-            <nav class="category">
-                <h3 class="category__heading">
-                    <i class="fas fa-list"></i>
-                    Danh mục
-                </h3>
-                <ul class="category-list">
-                    <li class="category-list-item category-list-item--active">
-                        <a href="" class="category-list-item__link">a</a>
-                    </li>
-                </ul>
-            </nav>
+        <div class="homepage">
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="grid__column-2">
+                        <nav class="category">
+                            <h3 class="category__heading">
+                                <i class="fas fa-list category__heading-icon"></i>
+                                Danh mục
+                            </h3>
+                            <ul class="category-list">
+                                <li class="category-list-item category-list-item--active">
+                                    <a href="" class="category-list-item__link">a</a>
+                                </li>
+                            </ul>
+                            <ul class="category-list">
+                                <li class="category-list-item">
+                                    <a href="" class="category-list-item__link">a</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="grid__column-10">
+    
+                    </div>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
