+ css product filter

--- a/index.html
+++ b/index.html
@@ -266,18 +266,59 @@
                             </h3>
                             <ul class="category-list">
                                 <li class="category-list-item category-list-item--active">
-                                    <a href="" class="category-list-item__link">a</a>
+                                    <a href="" class="category-list-item__link">Chuôt Gaming</a>
                                 </li>
-                            </ul>
-                            <ul class="category-list">
                                 <li class="category-list-item">
-                                    <a href="" class="category-list-item__link">a</a>
+                                    <a href="" class="category-list-item__link">Tai nghe Gaming</a>
+                                </li>
+                                <li class="category-list-item">
+                                    <a href="" class="category-list-item__link">Bàn phím Gaming</a>
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="grid__column-10">
-    
+                        <div class="filter">
+                            <span class="filter__label">Sắp xếp theo</span>
+                            <button class="filter__btn btn">Phổ biến</button>
+                            <button class="filter__btn btn btn--primary">Mới nhất</button>
+                            <button class="filter__btn btn">Bán chạy</button>
+                            <div class="select-input">
+                                <div class="select-input__label">
+                                    Giá
+                                </div>
+                                <i class="select-input__icon fas fa-angle-down"></i>
+
+                                <ul class="select-input__list">
+                                    <li class="select-input__list-item">
+                                        <a href="#" class="select-input__link">
+                                            Giá từ thấp đến cao
+                                        </a>
+                                    </li>
+                                    <li class="select-input__list-item">
+                                        <a href="#" class="select-input__link">
+                                            Giá từ cao đến thấp
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="filter-pagination">
+                                <span class="filter-pagination__wrap">
+                                    <span class="filter-pagination__wrap-current-page">1</span>/14
+                                </span>
+
+                                <div class="filter-pagination__control">
+                                    <a href="#"
+                                        class="filter-pagination__control-btn filter-pagination__control-btn--disable">
+                                        <i class="fas fa-angle-left"></i>
+                                    </a>
+                                    <a href="#" class="filter-pagination__control-btn">
+                                        <i class="fas fa-angle-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
