--- a/index.html
+++ b/index.html
@@ -319,6 +319,55 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="product">
+                            <div class="grid__row">
+                                <div class="grid__column-2-4">
+                                    <div class="product-item">
+                                        <div class="product-item__img"
+                                            style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
+                                        </div>
+                                        <h4 class="product-item__name">
+                                            [Nhập ELSSMTM02 giảm 100k] [Độc quyền] Điện Thoại Samsung Galaxy M02
+                                            (2GB/32GB) - Hàng Chính Hãng
+                                        </h4>
+                                        <div class="product-item__price">
+                                            <div class="product-item__price-old">₫2.390.000</div>
+                                            <div class="product-item__price-new">₫2.250.000</div>
+                                        </div>
+                                        <div class="product-item__action">
+                                            <span class="product-item__heart">
+                                                <i class="far fa-heart"></i>
+                                                <i class="fas fa-heart"></i>
+                                            </span>
+                                            <div class="product-item__rating">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
+                                        <div class="product-item__origin">
+                                            <span class="product-item__brand">
+                                                Whoo
+                                            </span>
+                                            <span class="product-item__orgin-name">
+                                                Korea
+                                            </span>
+                                        </div>
+                                        <div class="product-item__ribbon-favorite">
+                                            <i class="fas fa-check"></i>
+                                            Yêu thích
+                                        </div>
+                                        <div class="product-item__ribbon-sale-off">
+                                            <span class="product-item__sale-off-percent">10%</span>
+                                            <span class="product-item__sale-off-label">GIẢM</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
