- update css product list

--- a/index.html
+++ b/index.html
@@ -336,17 +336,19 @@
                                             <div class="product-item__price-new">₫2.250.000</div>
                                         </div>
                                         <div class="product-item__action">
-                                            <span class="product-item__heart">
-                                                <i class="far fa-heart"></i>
-                                                <i class="fas fa-heart"></i>
+                                            <!-- .product-item__heart-liked -->
+                                            <span class="product-item__heart product-item__heart-liked">
+                                                <i class="product-item__heart-icon--normal far fa-heart"></i>
+                                                <i class="product-item__heart-icon--like fas fa-heart"></i>
                                             </span>
                                             <div class="product-item__rating">
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
+                                            <span class="product-item__sold">50 đã bán</span>
                                         </div>
                                         <div class="product-item__origin">
                                             <span class="product-item__brand">
