--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                         </div>
                                         <div class="product-item__ribbon-favorite">
                                             <i class="fas fa-check"></i>
-                                            Yêu thích
+                                            <span>Yêu thích</span>
                                         </div>
                                         <div class="product-item__ribbon-sale-off">
                                             <span class="product-item__sale-off-percent">10%</span>
