--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         <div class="product">
                             <div class="grid__row">
                                 <div class="grid__column-2-4">
-                                    <div class="product-item">
+                                    <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
                                         </div>
@@ -366,7 +366,7 @@
                                             <span class="product-item__sale-off-percent">10%</span>
                                             <span class="product-item__sale-off-label">GIẢM</span>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
